fix: align image with logo

--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,10 @@ footer .copyright {
     box-sizing: border-box;
   }
 
+  .welcome-img {
+    text-align: center;
+  }
+
   .grid .welcome-text {
     grid-column: 3/11;
   }
